# cannyls_rpc

./: Cargo.toml  README.md
protobuf/: cannyls_rpc.proto
src/: client.rs  device.rs  lib.rs  protobuf.rs  registry.rs  rpc.rs  server.rs
tests/: rpc.rs
