[package]
name = "cannyls_rpc"
version = "0.1.0"
authors = ["The FrugalOS Developers"]
description = "RPC library for operating cannyls's devices from remote nodes"
homepage = "https://github.com/frugalos/cannyls_rpc"
repository = "https://github.com/frugalos/cannyls_rpc"
readme = "README.md"
keywords = ["RPC"]
categories = ["asynchronous", "network-programming"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/cannyls_rpc"}

[dependencies]
atomic_immut = "0.1"
bytecodec = "0.4"
cannyls = "0.9"
factory = "0.1"
fibers = "0.1"
fibers_rpc = "0.2"
futures = "0.1"
protobuf_codec = "0.2"
slog = "2"
trackable = "0.2"

[dev-dependencies]
tempdir = "0.3"
