[package]
edition = "2018"
name = "cannyls_rpc"
version = "0.3.1"
authors = ["The FrugalOS Developers"]
description = "RPC library for operating cannyls's devices from remote nodes"
homepage = "https://github.com/frugalos/cannyls_rpc"
repository = "https://github.com/frugalos/cannyls_rpc"
readme = "README.md"
keywords = ["RPC"]
categories = ["asynchronous", "network-programming"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/cannyls_rpc"}

[dependencies]
atomic_immut = "0.1"
bytecodec = "0.4"
cannyls = "0.10"
factory = "0.1"
fibers_rpc = "0.3"
futures = "0.3"
pin-project = "1.0.1"
protobuf_codec = "0.2"
slog = "2"
tokio = { version = "1.0", features = ["sync"] }
trackable = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt"] }
tempdir = "0.3"

[patch.crates-io]
fibers = { git = "https://github.com/dwango/fibers-rs", branch = "feature/tokio-1.0" }
fibers_rpc = { git = "https://github.com/koba-e964/fibers_rpc", branch = "feature/tokio-1.0" }
cannyls = { git = "https://github.com/frugalos/cannyls", branch = "feature/tokio-1.0" }
trackable = { git = "https://github.com/koba-e964/trackable", branch = "feature/trackable-for-poll" }
